[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncslot"
authors = [ { name="fancidev", email="fancidev@gmail.com" } ]
description = "Use asyncio-based library from Python for Qt."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["asyncio", "coroutine", "qt", "signal", "slot"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
PyQt5 = ["PyQt5"]
PyQt6 = ["PyQt6"]
PySide2 = ["PySide2"]
PySide6 = ["PySide6"]

[project.urls]
"Homepage" = "https://github.com/fancidev/asyncslot"
"Bug Tracker" = "https://github.com/fancidev/asyncslot/issues"
