[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qtinter"
authors = [ { name="fancidev", email="fancidev@gmail.com" } ]
description = "Interop between asyncio and Qt for Python"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["asyncio", "coroutine", "qt", "signal", "slot"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.optional-dependencies]
PyQt5 = ["PyQt5"]
PyQt6 = ["PyQt6"]
PySide2 = ["PySide2"]
PySide6 = ["PySide6"]

[project.urls]
"Homepage" = "https://github.com/fancidev/qtinter"
"Bug Tracker" = "https://github.com/fancidev/qtinter/issues"

[tool.setuptools_scm]
